@@ -797,6 +797,14 @@ _`math_output`
       fonts for high-quality typesetting that is scalable and prints
       at full resolution.
 
+      A custom URL can be appended after whitespace,
+      for example a local install
+      ``MathJax file:/usr/share/javascript/mathjax/MathJax.js`` or
+      `access the MathJax CDN using a https secure connection`__
+      ``mathjax https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=config=TeX-AMS-MML_HTMLorMML``.
+
+      __ http://www.mathjax.org/resources/faqs/#problem-https
+
       Pro:
         Works 'out of the box' across multiple browsers and platforms.
 
